Fix popup align and fetch action in docs store

--- a/src/components/Popup/styles.scss
+++ b/src/components/Popup/styles.scss
@@ -2,7 +2,6 @@
 
 .popup {
   display: none;
-  justify-content: center;
 
   position: fixed;
   top: 0;
@@ -19,6 +18,8 @@
 
   &.opened {
     display: flex;
+    justify-content: center;
+    align-items: start;
   }
 
   &-content {
