--- a/src/styles/styles.global.css
+++ b/src/styles/styles.global.css
@@ -1,3 +1,7 @@
 .fix-scroll {
   overflow: hidden;
 }
+
+* {
+  box-sizing: border-box;
+}
